--- a/ColoresPuzzle/huevopascua.html
+++ b/ColoresPuzzle/huevopascua.html
@@ -2,9 +2,12 @@
 <HTML>
  <HEAD>
   <TITLE> Diferencias </TITLE>
+ <!-- <script type="text/javascript" src="./js/script1.js">
+            components = ["bien","bien1","bien2","bien3","bien4","bien5"];
+      
+ -->
+
 <script type="text/javascript">
-
-
 function pintar(obj)
 {
    document.getElementById(obj).style.display = '';
