Fallo en la Alerta
Arreglado el código

--- a/minigames/abecedario_david/Qmayus.html
+++ b/minigames/abecedario_david/Qmayus.html
@@ -46,17 +46,17 @@
 		
   
 <MAP NAME="Q.jpg">
-<AREA SHAPE=POLY COORDS="202,204,176,259,128,268,87,225,144,199" OnMouseOver="rellenar('ele1')">
-<AREA SHAPE=POLY COORDS="81,239,117,275,85,315,48,288,65,256" OnMouseOver="rellenar('ele2')">
-<AREA SHAPE=POLY COORDS="44,301,83,324,75,365,31,359,38,321" OnMouseOver="rellenar('ele3')">
-<AREA SHAPE=POLY COORDS="30,371,76,372,76,394,86,435,90,440,42,455,31,405" OnMouseOver="rellenar('ele4')">
-<AREA SHAPE=POLY COORDS="94,446,46,467,72,503,122,544,154,491,112,474" OnMouseOver="rellenar('ele5')">
-<AREA SHAPE=POLY COORDS="169,498,134,548,160,553,203,548,227,532,196,489" OnMouseOver="rellenar('ele6')">
-<AREA SHAPE=POLY COORDS="240,439,282,459,296,381,254,382" OnMouseOver="rellenar('ele7')">
-<AREA SHAPE=POLY COORDS="253,369,300,369,293,309,283,288,242,315" OnMouseOver="rellenar('ele8')">
-<AREA SHAPE=POLY COORDS="280,282,238,309,226,287,191,260,213,210,252,237" OnMouseOver="rellenar('ele9')">
-<AREA SHAPE=POLY COORDS="154,407,213,406,234,445,228,448,205,442,198,476,157,410" OnMouseOver="rellenar('ele10')">
-<AREA SHAPE=POLY COORDS="270,500,232,537,255,576,311,573,277,518" OnMouseOver="rellenar('ele11')">
+<AREA SHAPE=POLY COORDS="202,204,176,259,128,268,87,225,144,199" OnMouseOver="rellenar2('ele1')">
+<AREA SHAPE=POLY COORDS="81,239,117,275,85,315,48,288,65,256" OnMouseOver="rellenar2('ele2')">
+<AREA SHAPE=POLY COORDS="44,301,83,324,75,365,31,359,38,321" OnMouseOver="rellenar2('ele3')">
+<AREA SHAPE=POLY COORDS="30,371,76,372,76,394,86,435,90,440,42,455,31,405" OnMouseOver="rellenar2('ele4')">
+<AREA SHAPE=POLY COORDS="94,446,46,467,72,503,122,544,154,491,112,474" OnMouseOver="rellenar2('ele5')">
+<AREA SHAPE=POLY COORDS="169,498,134,548,160,553,203,548,227,532,196,489" OnMouseOver="rellenar2('ele6')">
+<AREA SHAPE=POLY COORDS="240,439,282,459,296,381,254,382" OnMouseOver="rellenar2('ele7')">
+<AREA SHAPE=POLY COORDS="253,369,300,369,293,309,283,288,242,315" OnMouseOver="rellenar2('ele8')">
+<AREA SHAPE=POLY COORDS="280,282,238,309,226,287,191,260,213,210,252,237" OnMouseOver="rellenar2('ele9')">
+<AREA SHAPE=POLY COORDS="154,407,213,406,234,445,228,448,205,442,198,476,157,410" OnMouseOver="rellenar2('ele10')">
+<AREA SHAPE=POLY COORDS="270,500,232,537,255,576,311,573,277,518" OnMouseOver="rellenar2('ele11')">
 
 
 
