--- a/minigames/abecedario_david/Rmayus.html
+++ b/minigames/abecedario_david/Rmayus.html
@@ -47,19 +47,19 @@
 		 
   
 <MAP NAME="R.jpg">
-<AREA SHAPE=POLY COORDS="92,172,110,243,40,241,43,172" OnMouseOver="rellenar('ele1')">
-<AREA SHAPE=POLY COORDS="41,248,112,251,113,325,43,321" OnMouseOver="rellenar('ele2')">
-<AREA SHAPE=POLY COORDS="42,334,114,334,114,410,41,402" OnMouseOver="rellenar('ele3')">
-<AREA SHAPE=POLY COORDS="42,415,112,414,115,482,42,479" OnMouseOver="rellenar('ele4')">
-<AREA SHAPE=POLY COORDS="44,496,113,496,115,590,42,590" OnMouseOver="rellenar('ele5')">
-<AREA SHAPE=POLY COORDS="112,170,118,244,172,245,172,173" OnMouseOver="rellenar('ele6')">
-<AREA SHAPE=POLY COORDS="177,249,185,174,246,191,282,247,198,252,210,267,189,248" OnMouseOver="rellenar('ele7')">
-<AREA SHAPE=POLY COORDS="212,273,287,264,273,358,211,317,215,292" OnMouseOver="rellenar('ele8')">
-<AREA SHAPE=POLY COORDS="207,319,261,365,208,403,199,402,186,333" OnMouseOver="rellenar('ele9')">
-<AREA SHAPE=POLY COORDS="180,334,186,402,118,410,117,338" OnMouseOver="rellenar('ele10')">
-<AREA SHAPE=POLY COORDS="133,414,206,407,234,454,159,466" OnMouseOver="rellenar('ele11')">
-<AREA SHAPE=POLY COORDS="160,469,225,459,268,521,194,523" OnMouseOver="rellenar('ele12')">
-<AREA SHAPE=POLY COORDS="197,534,272,527,305,586,229,590" OnMouseOver="rellenar('ele13')">
+<AREA SHAPE=POLY COORDS="92,172,110,243,40,241,43,172" OnMouseOver="rellenar2('ele1')">
+<AREA SHAPE=POLY COORDS="41,248,112,251,113,325,43,321" OnMouseOver="rellenar2('ele2')">
+<AREA SHAPE=POLY COORDS="42,334,114,334,114,410,41,402" OnMouseOver="rellenar2('ele3')">
+<AREA SHAPE=POLY COORDS="42,415,112,414,115,482,42,479" OnMouseOver="rellenar2('ele4')">
+<AREA SHAPE=POLY COORDS="44,496,113,496,115,590,42,590" OnMouseOver="rellenar2('ele5')">
+<AREA SHAPE=POLY COORDS="112,170,118,244,172,245,172,173" OnMouseOver="rellenar2('ele6')">
+<AREA SHAPE=POLY COORDS="177,249,185,174,246,191,282,247,198,252,210,267,189,248" OnMouseOver="rellenar2('ele7')">
+<AREA SHAPE=POLY COORDS="212,273,287,264,273,358,211,317,215,292" OnMouseOver="rellenar2('ele8')">
+<AREA SHAPE=POLY COORDS="207,319,261,365,208,403,199,402,186,333" OnMouseOver="rellenar2('ele9')">
+<AREA SHAPE=POLY COORDS="180,334,186,402,118,410,117,338" OnMouseOver="rellenar2('ele10')">
+<AREA SHAPE=POLY COORDS="133,414,206,407,234,454,159,466" OnMouseOver="rellenar2('ele11')">
+<AREA SHAPE=POLY COORDS="160,469,225,459,268,521,194,523" OnMouseOver="rellenar2('ele12')">
+<AREA SHAPE=POLY COORDS="197,534,272,527,305,586,229,590" OnMouseOver="rellenar2('ele13')">
 
 
 </MAP>
