--- a/minigames/abecedario_david/Smayus.html
+++ b/minigames/abecedario_david/Smayus.html
@@ -44,16 +44,16 @@
 		 
   
 <MAP NAME="S.jpg">
-<AREA SHAPE=POLY COORDS="198,180,163,242,195,254,217,282,272,234,230,196" OnMouseOver="rellenar('ele1')">
-<AREA SHAPE=POLY COORDS="184,177,153,243,128,248,127,253,83,200,129,174" OnMouseOver="rellenar('ele2')">
-<AREA SHAPE=POLY COORDS="77,208,123,262,111,269,52,280,58,235" OnMouseOver="rellenar('ele3')">
-<AREA SHAPE=POLY COORDS="55,287,122,270,151,315,101,359,66,312" OnMouseOver="rellenar('ele4')">
-<AREA SHAPE=POLY COORDS="156,318,105,367,408,202,356" OnMouseOver="rellenar('ele5')">
-<AREA SHAPE=POLY COORDS="208,359,158,414,197,450,261,418" OnMouseOver="rellenar('ele6')">
-<AREA SHAPE=POLY COORDS="199,455,267,426,278,468,257,536,204,496,209,475" OnMouseOver="rellenar('ele7')">
-<AREA SHAPE=POLY COORDS="194,504,251,546,200,583,164,584,162,517,180,515" OnMouseOver="rellenar('ele8')">
-<AREA SHAPE=POLY COORDS="154,515,153,585,88,564,11,523,124,506" OnMouseOver="rellenar('ele9')">
-<AREA SHAPE=POLY COORDS="121,499,68,551,33,505,92,469" OnMouseOver="rellenar('ele10')">
+<AREA SHAPE=POLY COORDS="198,180,163,242,195,254,217,282,272,234,230,196" OnMouseOver="rellenar4('ele1')">
+<AREA SHAPE=POLY COORDS="184,177,153,243,128,248,127,253,83,200,129,174" OnMouseOver="rellenar4('ele2')">
+<AREA SHAPE=POLY COORDS="77,208,123,262,111,269,52,280,58,235" OnMouseOver="rellenar4('ele3')">
+<AREA SHAPE=POLY COORDS="55,287,122,270,151,315,101,359,66,312" OnMouseOver="rellenar4('ele4')">
+<AREA SHAPE=POLY COORDS="156,318,105,367,408,202,356" OnMouseOver="rellenar4('ele5')">
+<AREA SHAPE=POLY COORDS="208,359,158,414,197,450,261,418" OnMouseOver="rellenar4('ele6')">
+<AREA SHAPE=POLY COORDS="199,455,267,426,278,468,257,536,204,496,209,475" OnMouseOver="rellenar4('ele7')">
+<AREA SHAPE=POLY COORDS="194,504,251,546,200,583,164,584,162,517,180,515" OnMouseOver="rellenar4('ele8')">
+<AREA SHAPE=POLY COORDS="154,515,153,585,88,564,11,523,124,506" OnMouseOver="rellenar4('ele9')">
+<AREA SHAPE=POLY COORDS="121,499,68,551,33,505,92,469" OnMouseOver="rellenar4('ele10')">
 
 
 </MAP>
