--- a/minigames/abecedario_david/Tmayus.html
+++ b/minigames/abecedario_david/Tmayus.html
@@ -44,14 +44,14 @@
 		
   
 <MAP NAME="T.jpg">
-<AREA SHAPE=POLY COORDS="117,180,116,247,185,247,178,182,155,182" OnMouseOver="rellenar('ele1')">
-<AREA SHAPE=POLY COORDS="113,256,186,258,186,330,117,323" OnMouseOver="rellenar('ele2')">
-<AREA SHAPE=POLY COORDS="118,338,184,339,184,385,117,386" OnMouseOver="rellenar('ele3')">
-<AREA SHAPE=POLY COORDS="113,395,183,395,184,455,116,454" OnMouseOver="rellenar('ele4')">
-<AREA SHAPE=POLY COORDS="112,462,181,463,182,525,115,523" OnMouseOver="rellenar('ele5')">
-<AREA SHAPE=POLY COORDS="113,529,184,531,185,582,115,577" OnMouseOver="rellenar('ele6')">
-<AREA SHAPE=POLY COORDS="42,184,108,183,108,249,43,251" OnMouseOver="rellenar('ele7')">
-<AREA SHAPE=POLY COORDS="187,184,190,250,260,253,258,183" OnMouseOver="rellenar('ele8')">
+<AREA SHAPE=POLY COORDS="117,180,116,247,185,247,178,182,155,182" OnMouseOver="rellenar4('ele1')">
+<AREA SHAPE=POLY COORDS="113,256,186,258,186,330,117,323" OnMouseOver="rellenar4('ele2')">
+<AREA SHAPE=POLY COORDS="118,338,184,339,184,385,117,386" OnMouseOver="rellenar4('ele3')">
+<AREA SHAPE=POLY COORDS="113,395,183,395,184,455,116,454" OnMouseOver="rellenar4('ele4')">
+<AREA SHAPE=POLY COORDS="112,462,181,463,182,525,115,523" OnMouseOver="rellenar4('ele5')">
+<AREA SHAPE=POLY COORDS="113,529,184,531,185,582,115,577" OnMouseOver="rellenar4('ele6')">
+<AREA SHAPE=POLY COORDS="42,184,108,183,108,249,43,251" OnMouseOver="rellenar4('ele7')">
+<AREA SHAPE=POLY COORDS="187,184,190,250,260,253,258,183" OnMouseOver="rellenar4('ele8')">
 
 
 
