--- a/minigames/abecedario_david/Vmayus.html
+++ b/minigames/abecedario_david/Vmayus.html
@@ -47,17 +47,17 @@
 		
   
 <MAP NAME="V.jpg">
-<AREA SHAPE=POLY COORDS="38,181,93,181,110,231,53,219" OnMouseOver="rellenar('ele1')">
-<AREA SHAPE=POLY COORDS="54,240,110,239,139,320,79,324" OnMouseOver="rellenar('ele2')">
-<AREA SHAPE=POLY COORDS="86,344,147,343,157,394,101,398" OnMouseOver="rellenar('ele3')">
-<AREA SHAPE=POLY COORDS="105,410,160,407,180,450,136,481" OnMouseOver="rellenar('ele4')">
-<AREA SHAPE=POLY COORDS="123,483,163,483,181,523,150,525" OnMouseOver="rellenar('ele5')">
-<AREA SHAPE=POLY COORDS="139,534,184,532,201,583,162,583" OnMouseOver="rellenar('ele6')">
-<AREA SHAPE=POLY COORDS="276,180,336,181,317,230,269,230" OnMouseOver="rellenar('ele7')">
-<AREA SHAPE=POLY COORDS="261,240,322,241,291,299,256,286" OnMouseOver="rellenar('ele8')">
-<AREA SHAPE=POLY COORDS="234,313,289,313,269,371,226,363" OnMouseOver="rellenar('ele9')">
-<AREA SHAPE=POLY COORDS="220,374,267,387,247,447,200,441" OnMouseOver="rellenar('ele10')">
-<AREA SHAPE=POLY COORDS="191,460,250,469,209,567" OnMouseOver="rellenar('ele11')">
+<AREA SHAPE=POLY COORDS="38,181,93,181,110,231,53,219" OnMouseOver="rellenar5('ele1')">
+<AREA SHAPE=POLY COORDS="54,240,110,239,139,320,79,324" OnMouseOver="rellenar5('ele2')">
+<AREA SHAPE=POLY COORDS="86,344,147,343,157,394,101,398" OnMouseOver="rellenar5('ele3')">
+<AREA SHAPE=POLY COORDS="105,410,160,407,180,450,136,481" OnMouseOver="rellenar5('ele4')">
+<AREA SHAPE=POLY COORDS="123,483,163,483,181,523,150,525" OnMouseOver="rellenar5('ele5')">
+<AREA SHAPE=POLY COORDS="139,534,184,532,201,583,162,583" OnMouseOver="rellenar5('ele6')">
+<AREA SHAPE=POLY COORDS="276,180,336,181,317,230,269,230" OnMouseOver="rellenar5('ele7')">
+<AREA SHAPE=POLY COORDS="261,240,322,241,291,299,256,286" OnMouseOver="rellenar5('ele8')">
+<AREA SHAPE=POLY COORDS="234,313,289,313,269,371,226,363" OnMouseOver="rellenar5('ele9')">
+<AREA SHAPE=POLY COORDS="220,374,267,387,247,447,200,441" OnMouseOver="rellenar5('ele10')">
+<AREA SHAPE=POLY COORDS="191,460,250,469,209,567" OnMouseOver="rellenar5('ele11')">
 
 
 
