--- a/minigames/abecedario_david/Wmayus.html
+++ b/minigames/abecedario_david/Wmayus.html
@@ -59,27 +59,27 @@
 		
   
 <MAP NAME="W.jpg">
-<AREA SHAPE=POLY COORDS="43,159,73,163,83,231,57,227" OnMouseOver="rellenar('ele1')">
-<AREA SHAPE=POLY COORDS="60,239,83,238,96,303,74,304" OnMouseOver="rellenar('ele2')">
-<AREA SHAPE=POLY COORDS="73,314,98,311,107,367,81,365" OnMouseOver="rellenar('ele3')">
-<AREA SHAPE=POLY COORDS="84,377,109,378,117,441,96,439" OnMouseOver="rellenar('ele4')">
-<AREA SHAPE=POLY COORDS="97,449,119,448,123,495,108,495" OnMouseOver="rellenar('ele5')">
-<AREA SHAPE=POLY COORDS="106,506,123,506,139,545,114,546" OnMouseOver="rellenar('ele6')">
-<AREA SHAPE=POLY COORDS="197,161,214,162,209,202,191,197" OnMouseOver="rellenar('ele7')">
-<AREA SHAPE=POLY COORDS="188,206,209,195,282,175,279" OnMouseOver="rellenar('ele8')">
-<AREA SHAPE=POLY COORDS="172,290,195,293,179,363,159,357" OnMouseOver="rellenar('ele9')">
-<AREA SHAPE=POLY COORDS="158,369,180,373,159,449,142,447" OnMouseOver="rellenar('ele10')">
-<AREA SHAPE=POLY COORDS="139,457,164,460,145,539,137,500" OnMouseOver="rellenar('ele11')">
-<AREA SHAPE=POLY COORDS="227,162,219,204,226,240,250,239,233,164" OnMouseOver="rellenar('ele12')">
-<AREA SHAPE=POLY COORDS="227,251,251,263,323,242,319" OnMouseOver="rellenar('ele13')">
-<AREA SHAPE=POLY COORDS="243,334,267,332,276,388,254,393,254,392" OnMouseOver="rellenar('ele14')">
-<AREA SHAPE=POLY COORDS="256,403,279,401,291,491,273,491" OnMouseOver="rellenar('ele15')">
-<AREA SHAPE=POLY COORDS="275,504,291,504,298,546,287,547" OnMouseOver="rellenar('ele16')">
-<AREA SHAPE=POLY COORDS="357,162,385,163,369,267,346,234" OnMouseOver="rellenar('ele17')">
-<AREA SHAPE=POLY COORDS="342,247,366,249,348,322,322,318" OnMouseOver="rellenar('ele18')">
-<AREA SHAPE=POLY COORDS="329,332,351,335,334,418,315,416" OnMouseOver="rellenar('ele19')">
-<AREA SHAPE=POLY COORDS="311,430,333,433,320,489,305,488" OnMouseOver="rellenar('ele20')">
-<AREA SHAPE=POLY COORDS="302,499,321,499,311,539" OnMouseOver="rellenar('ele21')">
+<AREA SHAPE=POLY COORDS="43,159,73,163,83,231,57,227" OnMouseOver="rellenar5('ele1')">
+<AREA SHAPE=POLY COORDS="60,239,83,238,96,303,74,304" OnMouseOver="rellenar5('ele2')">
+<AREA SHAPE=POLY COORDS="73,314,98,311,107,367,81,365" OnMouseOver="rellenar5('ele3')">
+<AREA SHAPE=POLY COORDS="84,377,109,378,117,441,96,439" OnMouseOver="rellenar5('ele4')">
+<AREA SHAPE=POLY COORDS="97,449,119,448,123,495,108,495" OnMouseOver="rellenar5('ele5')">
+<AREA SHAPE=POLY COORDS="106,506,123,506,139,545,114,546" OnMouseOver="rellenar5('ele6')">
+<AREA SHAPE=POLY COORDS="197,161,214,162,209,202,191,197" OnMouseOver="rellenar5('ele7')">
+<AREA SHAPE=POLY COORDS="188,206,209,195,282,175,279" OnMouseOver="rellenar5('ele8')">
+<AREA SHAPE=POLY COORDS="172,290,195,293,179,363,159,357" OnMouseOver="rellenar5('ele9')">
+<AREA SHAPE=POLY COORDS="158,369,180,373,159,449,142,447" OnMouseOver="rellenar5('ele10')">
+<AREA SHAPE=POLY COORDS="139,457,164,460,145,539,137,500" OnMouseOver="rellenar5('ele11')">
+<AREA SHAPE=POLY COORDS="227,162,219,204,226,240,250,239,233,164" OnMouseOver="rellenar5('ele12')">
+<AREA SHAPE=POLY COORDS="227,251,251,263,323,242,319" OnMouseOver="rellenar5('ele13')">
+<AREA SHAPE=POLY COORDS="243,334,267,332,276,388,254,393,254,392" OnMouseOver="rellenar5('ele14')">
+<AREA SHAPE=POLY COORDS="256,403,279,401,291,491,273,491" OnMouseOver="rellenar5('ele15')">
+<AREA SHAPE=POLY COORDS="275,504,291,504,298,546,287,547" OnMouseOver="rellenar5('ele16')">
+<AREA SHAPE=POLY COORDS="357,162,385,163,369,267,346,234" OnMouseOver="rellenar5('ele17')">
+<AREA SHAPE=POLY COORDS="342,247,366,249,348,322,322,318" OnMouseOver="rellenar5('ele18')">
+<AREA SHAPE=POLY COORDS="329,332,351,335,334,418,315,416" OnMouseOver="rellenar5('ele19')">
+<AREA SHAPE=POLY COORDS="311,430,333,433,320,489,305,488" OnMouseOver="rellenar5('ele20')">
+<AREA SHAPE=POLY COORDS="302,499,321,499,311,539" OnMouseOver="rellenar5('ele21')">
 
 
 
