--- a/minigames/abecedario_david/Xmayus.html
+++ b/minigames/abecedario_david/Xmayus.html
@@ -50,17 +50,17 @@
 		
   
 <MAP NAME="X.jpg">
-<AREA SHAPE=POLY COORDS="58,142,113,142,149,200,90,205" OnMouseOver="rellenar('ele1')">
-<AREA SHAPE=POLY COORDS="96,221,149,205,168,234,122,255" OnMouseOver="rellenar('ele2')">
-<AREA SHAPE=POLY COORDS="127,267,172,244,185,268,154,319" OnMouseOver="rellenar('ele3')">
-<AREA SHAPE=POLY COORDS="190,279,157,330,176,339,203,293" OnMouseOver="rellenar('ele4')">
-<AREA SHAPE=POLY COORDS="226,339,194,392,219,436,249,392" OnMouseOver="rellenar('ele5')">
-<AREA SHAPE=POLY COORDS="233,459,273,429,292,471,252,489" OnMouseOver="rellenar('ele6')">
-<AREA SHAPE=POLY COORDS="259,144,320,143,280,203,232,194" OnMouseOver="rellenar('ele7')">
-<AREA SHAPE=POLY COORDS="221,214,277,216,251,266,221,231" OnMouseOver="rellenar('ele8')">
-<AREA SHAPE=POLY COORDS="207,246,243,278,228,293,196,261" OnMouseOver="rellenar('ele9')">
-<AREA SHAPE=POLY COORDS="150,345,179,400,155,433,116,410" OnMouseOver="rellenar('ele10')">
-<AREA SHAPE=POLY COORDS="103,431,145,457,108,524,57,518" OnMouseOver="rellenar('ele11')">
+<AREA SHAPE=POLY COORDS="58,142,113,142,149,200,90,205" OnMouseOver="rellenar6('ele1')">
+<AREA SHAPE=POLY COORDS="96,221,149,205,168,234,122,255" OnMouseOver="rellenar6('ele2')">
+<AREA SHAPE=POLY COORDS="127,267,172,244,185,268,154,319" OnMouseOver="rellenar6('ele3')">
+<AREA SHAPE=POLY COORDS="190,279,157,330,176,339,203,293" OnMouseOver="rellenar6('ele4')">
+<AREA SHAPE=POLY COORDS="226,339,194,392,219,436,249,392" OnMouseOver="rellenar6('ele5')">
+<AREA SHAPE=POLY COORDS="233,459,273,429,292,471,252,489" OnMouseOver="rellenar6('ele6')">
+<AREA SHAPE=POLY COORDS="259,144,320,143,280,203,232,194" OnMouseOver="rellenar6('ele7')">
+<AREA SHAPE=POLY COORDS="221,214,277,216,251,266,221,231" OnMouseOver="rellenar6('ele8')">
+<AREA SHAPE=POLY COORDS="207,246,243,278,228,293,196,261" OnMouseOver="rellenar6('ele9')">
+<AREA SHAPE=POLY COORDS="150,345,179,400,155,433,116,410" OnMouseOver="rellenar6('ele10')">
+<AREA SHAPE=POLY COORDS="103,431,145,457,108,524,57,518" OnMouseOver="rellenar6('ele11')">
 
 
 
