--- a/minigames/abecedario_david/Ymayus.html
+++ b/minigames/abecedario_david/Ymayus.html
@@ -50,16 +50,16 @@
 		
   
 <MAP NAME="Y.jpg">
-<AREA SHAPE=POLY COORDS="35,210,90,210,114,263,60,265" OnMouseOver="rellenar('ele1')">
-<AREA SHAPE=POLY COORDS="64,277,117,273,129,302,82,308" OnMouseOver="rellenar('ele2')">
-<AREA SHAPE=POLY COORDS="84,319,137,317,143,337,92,339" OnMouseOver="rellenar('ele3')">
-<AREA SHAPE=POLY COORDS="100,353,153,351,151,405,122,406" OnMouseOver="rellenar('ele4')">
-<AREA SHAPE=POLY COORDS="216,213,270,213,243,262,197,258" OnMouseOver="rellenar('ele5')">
-<AREA SHAPE=POLY COORDS="193,273,244,276,223,319,173,315" OnMouseOver="rellenar('ele6')">
-<AREA SHAPE=POLY COORDS="167,328,217,330,187,404,164,398,165,344" OnMouseOver="rellenar('ele7')">
-<AREA SHAPE=POLY COORDS="128,420,178,421,182,460,133,458" OnMouseOver="rellenar('ele8')">
-<AREA SHAPE=POLY COORDS="130,469,180,468,179,514,130,511" OnMouseOver="rellenar('ele9')">
-<AREA SHAPE=POLY COORDS="129,526,178,525,178,577,132,575" OnMouseOver="rellenar('ele10')">
+<AREA SHAPE=POLY COORDS="35,210,90,210,114,263,60,265" OnMouseOver="rellenar6('ele1')">
+<AREA SHAPE=POLY COORDS="64,277,117,273,129,302,82,308" OnMouseOver="rellenar6('ele2')">
+<AREA SHAPE=POLY COORDS="84,319,137,317,143,337,92,339" OnMouseOver="rellenar6('ele3')">
+<AREA SHAPE=POLY COORDS="100,353,153,351,151,405,122,406" OnMouseOver="rellenar6('ele4')">
+<AREA SHAPE=POLY COORDS="216,213,270,213,243,262,197,258" OnMouseOver="rellenar6('ele5')">
+<AREA SHAPE=POLY COORDS="193,273,244,276,223,319,173,315" OnMouseOver="rellenar6('ele6')">
+<AREA SHAPE=POLY COORDS="167,328,217,330,187,404,164,398,165,344" OnMouseOver="rellenar6('ele7')">
+<AREA SHAPE=POLY COORDS="128,420,178,421,182,460,133,458" OnMouseOver="rellenar6('ele8')">
+<AREA SHAPE=POLY COORDS="130,469,180,468,179,514,130,511" OnMouseOver="rellenar6('ele9')">
+<AREA SHAPE=POLY COORDS="129,526,178,525,178,577,132,575" OnMouseOver="rellenar6('ele10')">
 
 
 
