--- a/minigames/abecedario_david/Zmayus.html
+++ b/minigames/abecedario_david/Zmayus.html
@@ -50,16 +50,16 @@
 		
   
 <MAP NAME="Z.jpg">
-<AREA SHAPE=POLY COORDS="47,187,49,254,121,254,122,187" OnMouseOver="rellenar('ele1')">
-<AREA SHAPE=POLY COORDS="134,186,139,253,168,251,189,187" OnMouseOver="rellenar('ele2')">
-<AREA SHAPE=POLY COORDS="231,186,215,199,267,199,287,186" OnMouseOver="rellenar('ele3')">
-<AREA SHAPE=POLY COORDS="182,267,250,268,218,318,158,319" OnMouseOver="rellenar('ele4')">
-<AREA SHAPE=POLY COORDS="149,337,216,339,182,386,128,386" OnMouseOver="rellenar('ele5')">
-<AREA SHAPE=POLY COORDS="120,402,187,404,164,458,95,455" OnMouseOver="rellenar('ele6')">
-<AREA SHAPE=POLY COORDS="89,470,160,470,141,503,77,504" OnMouseOver="rellenar('ele7')">
-<AREA SHAPE=POLY COORDS="65,524,76,522,45,580,39,578" OnMouseOver="rellenar('ele8')">
-<AREA SHAPE=POLY COORDS="151,515,119,577,184,577,177,517" OnMouseOver="rellenar('ele9')">
-<AREA SHAPE=POLY COORDS="201,515,201,579,272,576,276,513" OnMouseOver="rellenar('ele10')">
+<AREA SHAPE=POLY COORDS="47,187,49,254,121,254,122,187" OnMouseOver="rellenar7('ele1')">
+<AREA SHAPE=POLY COORDS="134,186,139,253,168,251,189,187" OnMouseOver="rellenar7('ele2')">
+<AREA SHAPE=POLY COORDS="231,186,215,199,267,199,287,186" OnMouseOver="rellenar7('ele3')">
+<AREA SHAPE=POLY COORDS="182,267,250,268,218,318,158,319" OnMouseOver="rellenar7('ele4')">
+<AREA SHAPE=POLY COORDS="149,337,216,339,182,386,128,386" OnMouseOver="rellenar7('ele5')">
+<AREA SHAPE=POLY COORDS="120,402,187,404,164,458,95,455" OnMouseOver="rellenar7('ele6')">
+<AREA SHAPE=POLY COORDS="89,470,160,470,141,503,77,504" OnMouseOver="rellenar7('ele7')">
+<AREA SHAPE=POLY COORDS="65,524,76,522,45,580,39,578" OnMouseOver="rellenar7('ele8')">
+<AREA SHAPE=POLY COORDS="151,515,119,577,184,577,177,517" OnMouseOver="rellenar7('ele9')">
+<AREA SHAPE=POLY COORDS="201,515,201,579,272,576,276,513" OnMouseOver="rellenar7('ele10')">
 
 
 
