Changes in Contornos

--- a/minigames/numeros/contorno1.html
+++ b/minigames/numeros/contorno1.html
@@ -25,33 +25,33 @@
     }
  </style>
  </head>
- <body>
- <p style="text-align:center;font-size:40px;margin-top:1%">Rellena el recorrido</p>
-  <div class="principal"> 
-     <div class="contenedor">
-     <!-- imagenes del recorrido -->
-         <IMG SRC="./images/uno.png" USEMAP="#uno.png" height=432 BORDER=0 style="position:absolute;cursor: url(./images/estilo/paloma.gif),url(./images/paloma.ani),auto;">
-         <IMG SRC="./images/contornos/uno01.png" ID="ele1" USEMAP="#uno.png" class="invisible">
-         <IMG SRC="./images/contornos/uno02.png" ID="ele2" USEMAP="#uno.png" class="invisible">
-         <IMG SRC="./images/contornos/uno03.png" ID="ele3" USEMAP="#uno.png" class="invisible">
-         <IMG SRC="./images/contornos/uno04.png" ID="ele4" USEMAP="#uno.png" class="invisible">
-         <IMG SRC="./images/contornos/uno05.png" ID="ele5" USEMAP="#uno.png" class="invisible">
-         <IMG SRC="./images/contornos/uno06.png" ID="ele6" USEMAP="#uno.png" class="invisible">
-         <IMG SRC="./images/contornos/uno07.png" ID="ele7" USEMAP="#uno.png" class="invisible">
-         <IMG SRC="./images/contornos/uno08.png" ID="ele8" USEMAP="#uno.png" class="invisible">
-         <IMG SRC="./images/contornos/uno09.png" ID="ele9" USEMAP="#uno.png" class="invisible">
-             <MAP NAME="uno.png" style="position:absolute;cursor: url(./images/estilo/paloma.gif),url(./images/paloma.ani),auto;;">
-<AREA SHAPE=POLY COORDS="40,97,81,151,49,171,27,178,12,170,1,152,4,130,29,108,38,99" OnMouseOver="rellenar('ele1')" >         
-<AREA SHAPE=POLY COORDS="81,150,127,112,76,68,42,98" OnMouseOver="rellenar('ele2')" >
-<AREA SHAPE=POLY COORDS="127,113,76,69,129,31" OnMouseOver="rellenar('ele3')">
-<AREA SHAPE=POLY COORDS="128,112,129,24,165,3,190,8,204,27,208,112" OnMouseOver="rellenar('ele4')">                      
-<AREA SHAPE=POLY COORDS="131,113,207,111,206,183,135,181,129,186,130,149" OnMouseOver="rellenar('ele5')" >                 
-<AREA SHAPE=POLY COORDS="129,183,206,184,206,243,128,242" OnMouseOver="rellenar('ele6')">
-<AREA SHAPE=POLY COORDS="130,244,205,243,210,313,130,312" OnMouseOver="rellenar('ele7')">
-<AREA SHAPE=POLY COORDS="129,315,206,314,207,359,128,362" OnMouseOver="rellenar('ele8')">
-<AREA SHAPE=POLY COORDS="129,361,207,360,203,397,182,422,144,416,131,393" OnMouseOver="rellenar('ele9')" >            
-</MAP>
-     </div>
-</div>
- </body>
+     <body>
+         <p style="text-align:center;font-size:40px;margin-top:1%">Rellena el recorrido</p>
+         <div class="principal"> 
+             <div class="contenedor">
+                 <!-- imagenes del recorrido -->
+                 <IMG SRC="./images/uno.png" USEMAP="#uno.png" height=432 BORDER=0 style="position:absolute;cursor: url(./images/estilo/paloma.gif),url(./images/paloma.ani),auto;">
+                 <IMG SRC="./images/contornos/uno01.png" ID="ele1" USEMAP="#uno.png" class="invisible">
+                 <IMG SRC="./images/contornos/uno02.png" ID="ele2" USEMAP="#uno.png" class="invisible">
+                 <IMG SRC="./images/contornos/uno03.png" ID="ele3" USEMAP="#uno.png" class="invisible">
+                 <IMG SRC="./images/contornos/uno04.png" ID="ele4" USEMAP="#uno.png" class="invisible">
+                 <IMG SRC="./images/contornos/uno05.png" ID="ele5" USEMAP="#uno.png" class="invisible">
+                 <IMG SRC="./images/contornos/uno06.png" ID="ele6" USEMAP="#uno.png" class="invisible">
+                 <IMG SRC="./images/contornos/uno07.png" ID="ele7" USEMAP="#uno.png" class="invisible">
+                 <IMG SRC="./images/contornos/uno08.png" ID="ele8" USEMAP="#uno.png" class="invisible">
+                 <IMG SRC="./images/contornos/uno09.png" ID="ele9" USEMAP="#uno.png" class="invisible">
+                 <MAP NAME="uno.png" style="position:absolute;cursor: url(./images/estilo/paloma.gif),url(./images/paloma.ani),auto;">
+                    <AREA SHAPE=POLY COORDS="40,97,81,151,49,171,27,178,12,170,1,152,4,130,29,108,38,99" OnMouseOver="rellenar('ele1')" >         
+                    <AREA SHAPE=POLY COORDS="81,150,127,112,76,68,42,98" OnMouseOver="rellenar('ele2')" >
+                    <AREA SHAPE=POLY COORDS="127,113,76,69,129,31" OnMouseOver="rellenar('ele3')">
+                    <AREA SHAPE=POLY COORDS="128,112,129,24,165,3,190,8,204,27,208,112" OnMouseOver="rellenar('ele4')">                      
+                    <AREA SHAPE=POLY COORDS="131,113,207,111,206,183,135,181,129,186,130,149" OnMouseOver="rellenar('ele5')" >                 
+                    <AREA SHAPE=POLY COORDS="129,183,206,184,206,243,128,242" OnMouseOver="rellenar('ele6')">
+                    <AREA SHAPE=POLY COORDS="130,244,205,243,210,313,130,312" OnMouseOver="rellenar('ele7')">
+                    <AREA SHAPE=POLY COORDS="129,315,206,314,207,359,128,362" OnMouseOver="rellenar('ele8')">
+                    <AREA SHAPE=POLY COORDS="129,361,207,360,203,397,182,422,144,416,131,393" OnMouseOver="rellenar('ele9')" >            
+                </MAP>
+            </div>
+        </div>
+    </body>
 </html>
