--- a/minigames/numeros2/reconocerCantidades2.html
+++ b/minigames/numeros2/reconocerCantidades2.html
@@ -41,7 +41,7 @@
 
  <body>
   <p style="text-align:center;font-size:30px;margin-top:1%">¿Cu&aacute;ntos hay de cada uno?</p>
-  <img src="./images/fondo02.png" style="margin:auto; height:500px;border:solid;border-radius:20px;border-color:#ccccff;float:left;position:relative; margin-left:10%"/>
+  <img src="./images/fondo02.png" style="margin:auto;border:solid;border-radius:20px;border-color:#ccccff;float:left;position:relative; margin-left:10%"/>
   <table style="position:relative; margin-left:55%;width:30%" cellspacing="2" >
   <tr>
 	<td><img src="./images/arbol.png" height=100/></td>
