--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -13,8 +13,8 @@
  <form name="datos" method="post" action="pag2.html">
 <TABLE align="center">
 <TR>
-	<TD><input TYPE="button" name="ninos" id="nino"  value="   Niños   "></TD>
-	<TD><input TYPE="button" name="porfes" id="profes"  value="Profesores"></TD>
+	<TD><input TYPE="submit" name="ninos" id="nino"  value="   Niños   "></TD>
+	<TD><input TYPE="submit" name="porfes" id="profes"  value="Profesores"></TD>
 </TR>
 </TABLE>
 </form>
